TestCases/Errors/Haversine/observations/sst/aut_04_obs.spm
obs r15-c5 1e-08
obs r16-c5 0.000184902982918376
obs r17-c5 0.000378068465086805
obs r18-c5 1e-08
obs r15-c6 5.14244574719737e-05
obs r16-c6 0.000223381023556561
obs r17-c6 0.000248654637274691
obs r18-c6 0.000299450161438847
obs r19-c6 4.57205559619605e-05
obs r20-c6 1e-08
obs r15-c7 1e-08
obs r16-c7 0.000373887768842078
obs r17-c7 0.000381911349370122
obs r20-c7 1e-08
obs r15-c8 0.000754716981132075
obs r18-c12 1e-08
obs r19-c12 1e-08
obs r20-c12 1e-08
obs r19-c13 1e-08
obs r8-c14 0.0114705882352941
obs r9-c14 0.0140196078431373
obs r9-c17 0.0123195631528965
obs r13-c17 0.0479086538461539
obs r12-c18 0.0258333333333333
obs r13-c18 0.038125
obs r5-c19 1e-08
obs r10-c19 0.0586920024420024
obs r11-c19 0.0331551973100025
obs r12-c19 0.0381017740429505
obs r8-c20 0.00101010101010101
obs r9-c20 0.000880010445227837
obs r10-c20 0.0166025641025641
obs r11-c20 0.0193247863247863
obs r2-c21 1e-08
obs r5-c21 0.00107962213225371
obs r9-c21 1e-08
obs r3-c22 1e-08
obs r9-c22 1e-08
error_value r15-c5 0.2
error_value r16-c5 0.2
error_value r17-c5 0.2
error_value r18-c5 0.2
error_value r15-c6 0.2
error_value r16-c6 0.2
error_value r17-c6 0.2
error_value r18-c6 0.2
error_value r19-c6 0.2
error_value r20-c6 0.2
error_value r15-c7 0.2
error_value r16-c7 0.2
error_value r17-c7 0.2
error_value r20-c7 0.2
error_value r15-c8 0.2
error_value r18-c12 0.2
error_value r19-c12 0.2
error_value r20-c12 0.2
error_value r19-c13 0.2
error_value r8-c14 0.2
error_value r9-c14 0.2
error_value r9-c17 0.2
error_value r13-c17 0.2
error_value r12-c18 0.2
error_value r13-c18 0.2
error_value r5-c19 0.2
error_value r10-c19 0.2
error_value r11-c19 0.2
error_value r12-c19 0.2
error_value r8-c20 0.2
error_value r9-c20 0.2
error_value r10-c20 0.2
error_value r11-c20 0.2
error_value r2-c21 0.2
error_value r5-c21 0.2
error_value r9-c21 0.2
error_value r3-c22 0.2
error_value r9-c22 0.2
